feat: Adiciona controladores e rotas para gerenciamento de usuários e categorias do Baylet
